# AEVS-sdk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dco.yml  release.yml
docs/: 01-getting-started.md  02-core-concepts.md  03-configuration.md  04-langchain-integration.md  05-mcp-integration.md  06-receipt-verification.md  07-security-and-privacy.md  08-api-reference.md  09-troubleshooting.md  10-crewai-integration.md  README.md  api-reference.md  configuration.md  core-concepts.md  getting-started.md  langchain-integration.md  mcp-integration.md  receipt-verification.md  security-and-privacy.md  troubleshooting.md
examples/: .env.example  01_local_quickstart.py  02_openai_agent.py  03_asi_agent.py  04_crewai_agent.py  README.md  pyproject.toml
src/aevs/: __init__.py  _api.py  _drainer.py  _version.py  config.py  exceptions.py
src/aevs/adapters/: base.py  crewai.py  langchain.py  mcp.py
src/aevs/core/: buffer.py  client.py  receipt.py  serializer.py  signer.py  types.py
src/aevs/crypto/: chain.py  ecdsa.py  hkdf.py  hmac_auth.py
tests/: conftest.py  test_api_adversarial.py  test_buffer.py  test_client.py  test_client_adversarial.py  test_config.py  test_config_adversarial.py  test_crewai_adapter.py  test_drainer_adversarial.py  test_init_adversarial.py  test_integration.py  test_invocation_id.py  test_langchain_adapter.py  test_langchain_adversarial.py  test_mcp_adapter.py  test_mcp_adversarial.py  test_receipt.py  test_receipt_adversarial.py  test_security.py  test_serializer.py  test_signer.py  test_signer_v2.py
tests/test_crypto/: test_chain.py  test_hkdf.py  test_hmac.py
