[tool.poetry]
name = "aevs"
version = "0.1.0"
description = "Agent Execution Verification System — transparent audit SDK for AI agents"
readme = "README.md"
license = "MIT"
authors = [
    "Devendra Chauhan <devendra.chauhan@fetch.ai>",
    "Mehul Gaidhani <mehul.gaidhani@fetch.ai>",
]
homepage = "https://github.com/fetchai/AEVS-sdk"
repository = "https://github.com/fetchai/AEVS-sdk"
packages = [{include = "aevs", from = "src"}]
keywords = ["ai", "agents", "verification", "audit", "langchain", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/fetchai/AEVS-sdk/issues"

[tool.poetry.dependencies]
python = "^3.10"
httpx = ">=0.27"
cryptography = ">=43.0"
mcp = {version = ">=1.20", optional = true}
langchain-core = {version = ">=0.2", optional = true}

[tool.poetry.extras]
langchain = ["langchain-core"]
mcp = ["mcp"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
pytest-cov = ">=5.0"
ruff = ">=0.4"
mypy = ">=1.10"
respx = ">=0.21"
langchain-core = ">=0.2"
mcp = ">=1.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Import `aevs` from ./src so `pytest` matches `PYTHONPATH=src` (avoids stale site-packages).
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
