[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["Devendra116 <chauhandevendra116@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aevs = {extras = ["langchain"], version = "^0.2.1"}
python-dotenv = "^1.2.2"
langchain = "^1.2.18"
langchain-openai = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
