[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["Devendra116 <chauhandevendra116@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aevs = {extras = ["langchain", "crewai"], path = "..", develop = true}
python-dotenv = "^1.2.2"
langchain = "^1.2.18"
langchain-openai = "^1.2.1"
crewai = {version = "^1.0.0", python = ">=3.10,<3.14"}
# crewai -> chromadb pulls in onnxruntime; 1.24+ dropped the Python 3.10
# wheel (cp310), so cap it below 1.24 only on 3.10. On 3.11+ it floats.
onnxruntime = {version = "<1.24", python = "<3.11"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
